--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a href="./index.html" class="header-menu-link">Studio</a>
+              <a href="./index.html" class="header-menu-link current">Studio</a>
             </li>
             <li class="header-menu-item">
               <a href="" class="header-menu-link">Portfolio</a>
