--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </address>
       </div>
     </header>
+
     <!-- Hero -->
     <main>
       <section class="hero">
@@ -72,6 +73,13 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <a href="" class="features-link">
+                  <svg class="features-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +87,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <a href="" class="features-link">
+                  <svg class="features-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +101,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <a href="" class="features-link">
+                  <svg class="features-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -93,6 +115,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <a href="" class="features-link">
+                  <svg class="features-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -118,6 +147,36 @@
               <div class="team-card">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
+                <ul class="soc-list">
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -131,6 +190,36 @@
               <div class="team-card">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+                <ul class="soc-list">
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -144,6 +233,36 @@
               <div class="team-card">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
+                <ul class="soc-list">
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -157,6 +276,36 @@
               <div class="team-card">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
+                <ul class="soc-list">
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-list-item">
+                    <a href="" class="soc-link">
+                      <svg class="soc-link-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
