--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </section>
 
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -331,13 +331,21 @@
             </li>
 
             <li class="portfolio-item">
-              <img
-                src="./images/img-5.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-5.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -406,13 +414,48 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="footer-logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-descr">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="footer-logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc-media">
+          <p class="soc-media-text">Social media</p>
+          <ul class="soc-media-list">
+            <li class="soc-media-item">
+              <a href="" class="soc-media-link">
+                <svg class="soc-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-media-item">
+              <a href="" class="soc-media-link">
+                <svg class="soc-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-media-item">
+              <a href="" class="soc-media-link">
+                <svg class="soc-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-media-item">
+              <a href="" class="soc-media-link">
+                <svg class="soc-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
