--- a/index.html
+++ b/index.html
@@ -309,13 +309,20 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img-4.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-4.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -345,13 +352,20 @@
             </li>
 
             <li class="portfolio-item">
-              <img
-                src="./images/img-6.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-6.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
@@ -359,13 +373,20 @@
             </li>
 
             <li class="portfolio-item">
-              <img
-                src="./images/img-7.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-7.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -373,13 +394,20 @@
             </li>
 
             <li class="portfolio-item">
-              <img
-                src="./images/img-8.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-8.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
@@ -387,13 +415,20 @@
             </li>
 
             <li class="portfolio-item">
-              <img
-                src="./images/img-9.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/img-9.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <p class="portfolio-item-descr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
