--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer-descr">
           <a href="./index.html" class="footer-logo"
             >Web<span class="footer-logo-studio">Studio</span></a
